test/log/conversion/vtrunc_w_i32.txt
vtrunc_w_i32.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vtrunc_w_i32.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vtrunc_w_i32.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vtrunc_w_i32.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vtrunc_w_i32.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vtrunc_w_i32.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vtrunc_w_i32.c:22:6: warning: no previous prototype for 'vtrunc_w_i32_golden' [-Wmissing-prototypes]
   22 | void vtrunc_w_i32_golden(int64_t *a,uint32_t *b,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~
vtrunc_w_i32.c: In function 'vtrunc_w_i32_golden':
vtrunc_w_i32.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vtrunc_w_i32.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vtrunc_w_i32.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vtrunc_w_i32.c:22:35: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vtrunc_w_i32_golden(int64_t *a,uint32_t *b,int32_t *exp_result) {
      |                          ~~~~~~~~~^
vtrunc_w_i32.c:22:47: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vtrunc_w_i32_golden(int64_t *a,uint32_t *b,int32_t *exp_result) {
      |                                     ~~~~~~~~~~^
vtrunc_w_i32.c:22:58: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vtrunc_w_i32_golden(int64_t *a,uint32_t *b,int32_t *exp_result) {
      |                                                 ~~~~~~~~~^~~~~~~~~~
vtrunc_w_i32.c: In function 'main':
vtrunc_w_i32.c:15:15: error: subscripted value is neither array nor pointer nor vector
   15 |              a[i] = random(threshold); \
      |               ^
vtrunc_w_i32.c:38:5: note: in expansion of macro 'data_init'
   38 |     data_init(a, exp_a, 8*2, 0xffffffffffffffff);
      |     ^~~~~~~~~
vtrunc_w_i32.c:16:22: error: subscripted value is neither array nor pointer nor vector
   16 |              b[i] = a[i]; \
      |                      ^
vtrunc_w_i32.c:38:5: note: in expansion of macro 'data_init'
   38 |     data_init(a, exp_a, 8*2, 0xffffffffffffffff);
      |     ^~~~~~~~~
vtrunc_w_i32.c:45:14: error: too many arguments to function 'vtrunc_w_i32'
   45 |     result = vtrunc_w_i32(a,b);
      |              ^~~~~~~~~~~~
In file included from vtrunc_w_i32.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2262:1: note: declared here
 2262 | __RUGRATS_TRUNCATE_OP (trunc, i, int, 32, 64, 16, 8)
      | ^~~~~~~~~~~~~~~~~~~~~
vtrunc_w_i32.c:50:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   50 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vtrunc_w_i32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vtrunc_w_i32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vtrunc_w_i32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vtrunc_w_i32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed